# seismosizer-webengine

./: README.md  pyproject.toml
seismosizer_webengine/: remote.py
src/: remote.py
test/: test_fastapi.py
